Slashes put back for links.

--- a/app/views/common_assets/shared/mailers/_footer.html.erb
+++ b/app/views/common_assets/shared/mailers/_footer.html.erb
@@ -2,9 +2,9 @@
 	<wrapper class="footer">
 		<left>
 			<menu>
-				<item href="<%= Setting.get(:CMS_DOMAIN) %>pages/faq">FAQ</item>
-				<item href="<%= Setting.get(:CMS_DOMAIN) %>pages/support">Support</item>
-				<item href="<%= Setting.get(:CMS_DOMAIN) %>pages/contact">Contact</item>
+				<item href="<%= Setting.get(:CMS_DOMAIN) %>/pages/faq">FAQ</item>
+				<item href="<%= Setting.get(:CMS_DOMAIN) %>/pages/support">Support</item>
+				<item href="<%= Setting.get(:CMS_DOMAIN) %>/pages/contact">Contact</item>
 			</menu>
 		</left>
 	</wrapper>
