--- a/app/views/common_assets/shared/mailers/_header.html.erb
+++ b/app/views/common_assets/shared/mailers/_header.html.erb
@@ -2,11 +2,11 @@
 	<container>
 		<row class="collapse">
 			<columns small="6">
-				<a href="<%= Setting.get(:CMS_DOMAIN) %>">
-					<img alt="YugenTrade" src="<%= URI.join(Setting.get(:CMS_DOMAIN), image_url('ygn-logotype.png')) %>" width="120" style="width: 100%; max-width: 120px; font-family: sans-serif; color: #ffffff; font-size: 20px; display: block; border: 0px;" border="0"></a>
+				<a href="<%= Setting.get(:CORE_DOMAIN) %>">
+					<img alt="YugenTrade" src="<%= URI.join(Setting.get(:CORE_DOMAIN), image_url('ygn-logotype.png')) %>" width="120" style="width: 100%; max-width: 120px; font-family: sans-serif; color: #ffffff; font-size: 20px; display: block; border: 0px;" border="0"></a>
 			</columns>
 			<columns small="6" class="links">
-				<button class="small radius warning btn" href="<%= Setting.get(:CMS_DOMAIN) %>/trading">Trade</button>
+				<button class="small radius warning btn" href="<%= Setting.get(:CORE_DOMAIN) %>/trading/bchbtc">Trade</button>
 			</columns>
 		</row>
 	</container>
