Groundhog day - again

--- a/app/views/common_assets/shared/_footer.html.erb
+++ b/app/views/common_assets/shared/_footer.html.erb
@@ -5,7 +5,7 @@
 			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>/pages/about">About</a></li>
 			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>/pages/terms-of-service">Terms Of Service</a></li>
 			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>/pages/privacy">Privacy</a></li>
-			<li><a href="<%= ENV['STATUS_DOMAIN'] %>">Status</a></li>
+			<li><a href="<%= Setting.get(:STATUS_DOMAIN) %>">Status</a></li>
 		</ul>
 		<ul class="col-6 col-sm-3 list-unstyled mb-4 mb-sm-3">
 			<li class="title">Resources</li>
