--- a/assets/stylesheets/_common.scss
+++ b/assets/stylesheets/_common.scss
@@ -22,7 +22,7 @@ a {
 
 .page-link {
 	color: #656556;
-	&.active .page-link {
+	.page-item.active & {
 		color: #1b1f23;
 		background-color: #ffe291;
 		border-color: #ffbc00;
