--- a/assets/stylesheets/common/_header.scss
+++ b/assets/stylesheets/common/_header.scss
@@ -53,7 +53,7 @@ $menu-bgcolor: #24292d;
 		color: #fff;
 		position: relative;
 		z-index: 150;
-		padding: 10px 10px 10px 20px;
+		padding: 10px 10px 8px 20px;
 		margin: 0;
 		font-size: 18px;
 		&:hover {
@@ -328,3 +328,41 @@ $menu-bgcolor: #24292d;
 		}
 	}
 }
+
+@include media-breakpoint-down(xs) {
+	.navbar {
+		.btn.trade {
+			margin: 0;
+			position: static;
+		}
+	// 	.navbar-brand {
+	// 		padding: 4px 0 0 15px;
+	// 		.icon-ygt-logo {
+	// 			font-size: 28px;
+	// 			top: 4px;
+	// 		}
+	// 		span {
+	// 			display: none;
+	// 		}
+	// 	}
+	}
+}
+
+@media (max-width: 420px) {
+	.navbar {
+		.navbar-brand {
+			padding: 4px 0 0 15px;
+			.icon-ygt-logo {
+				font-size: 28px;
+				top: 4px;
+			}
+			span {
+				display: none;
+			}
+		}
+	}
+}
+
+
+
+
