--- a/app/views/common_assets/shared/_header.html.erb
+++ b/app/views/common_assets/shared/_header.html.erb
@@ -3,9 +3,9 @@
 <nav class="navbar navbar-expand-md fixed-top">
 	<a class="navbar-brand" href="<%= Setting.get(:CORE_DOMAIN) %>">
 		<i class="icon-ygt-logo"></i>
-		<span class="">YugenTrade</span>
+		<span>YugenTrade</span>
 	</a>
-	<a class="trade d-none d-sm-inline" href="<%= Setting.get(:CORE_DOMAIN) %>/trade">Trade</a>
+	<a class="trade" href="<%= Setting.get(:CORE_DOMAIN) %>/trade">Trade <i class="icon-exchange"></i></a>
 
 	<div id="ygn-nav">
 		<i class="icon-menu float-right" aria-controls="ygn-nav" aria-expanded="false" aria-label="Toggle navigation"></i>
@@ -35,15 +35,14 @@
 
 			</ul>
 		</div>
-		<p class="navbar-text float-left ">
-			<a href="<%= Setting.get(:CORE_DOMAIN) %>/trade" class="d-inline d-sm-none"><button class="btn trade"><i class="icon-exchange"></i></button></a>
-			<% unless !show_user %>
-				<% unless current_user %>
-						<a href="<%= Setting.get(:CORE_DOMAIN) %>/auth/barong"><button class="btn btn-danger">Register</button></a>
-						<a href="<%= Setting.get(:CORE_DOMAIN) %>/auth/barong"><button class="btn btn-success">Sign In</button></a>
-				<% end %>
+		<% unless !show_user %>
+			<% unless current_user %>
+				<p class="navbar-text float-left ">
+					<a href="<%= Setting.get(:CORE_DOMAIN) %>/auth/barong"><button class="btn btn-danger">Register</button></a>
+					<a href="<%= Setting.get(:CORE_DOMAIN) %>/auth/barong"><button class="btn btn-success">Sign In</button></a>
+				</p>
 			<% end %>
-		</p>
+		<% end %>
 	</div>
 	<div class="menu_mask d-none"></div>
 </nav>
