--- a/app/views/common_assets/shared/_header.html.erb
+++ b/app/views/common_assets/shared/_header.html.erb
@@ -38,7 +38,7 @@
 		<% unless !show_user %>
 			<% unless current_user %>
 				<p class="navbar-text float-left ">
-					<a href="<%= Setting.get(:CORE_DOMAIN) %>/auth/barong"><button class="btn btn-danger">Register</button></a>
+					<a href="<%= Setting.get(:OAUTH_DOMAIN) %>/accounts/sign_up"><button class="btn btn-danger">Register</button></a>
 					<a href="<%= Setting.get(:CORE_DOMAIN) %>/auth/barong"><button class="btn btn-success">Sign In</button></a>
 				</p>
 			<% end %>
