--- a/app/views/layouts/error.html.erb
+++ b/app/views/layouts/error.html.erb
@@ -10,7 +10,7 @@
 </head>
 
 <body id="pages" class="devise">
-    <%= render 'common_assets/shared/header', locals: { show_user: false }  %>
+    <%= render 'common_assets/shared/header', locals: { show_user: false, current_user: nil, is_admin: false}  %>
 
     <div class="container-fluid">
         <div class="row justify-content-center h-100">
