--- a/app/views/common_assets/shared/_header_profile.html.erb
+++ b/app/views/common_assets/shared/_header_profile.html.erb
@@ -1,9 +1,9 @@
 <li class="nav-item dropdown order-3 active" id="profile">
 	<a class="nav-link dropdown-toggle" href="#" id="profile-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="icon-user"></i><span class="hidden-md"><%= current_user.email %> </span><i class="icon-chevron-down"></i></a>
 	<div class="dropdown-menu" aria-labelledby="profile-dropdown">
-        <%= render partial: 'shared/dropwdown_menu', locals: { link: "#{Setting.get(:CORE_DOMAIN)}/funds", link_name: 'Funds', icon: 'wallet' } %>
-        <%= render partial: 'shared/dropwdown_menu', locals: { link: "#{Setting.get(:CORE_DOMAIN)}/profile", link_name: 'Profile', icon: 'wrench' } %>
-        <%= render partial: 'shared/dropwdown_menu', locals: { link: "#{Setting.get(:CORE_DOMAIN)}/history/orders", link_name: 'History', icon: 'history' } %>
+        <%= render partial: 'common_assets/shared/dropwdown_menu', locals: { link: "#{Setting.get(:CORE_DOMAIN)}/funds", link_name: 'Funds', icon: 'wallet' } %>
+        <%= render partial: 'common_assets/shared/dropwdown_menu', locals: { link: "#{Setting.get(:CORE_DOMAIN)}/profile", link_name: 'Profile', icon: 'wrench' } %>
+        <%= render partial: 'common_assets/shared/dropwdown_menu', locals: { link: "#{Setting.get(:CORE_DOMAIN)}/history/orders", link_name: 'History', icon: 'history' } %>
 		<% if is_admin %>
             <a class="dropdown-item" href="<%= Setting.get(:CORE_DOMAIN) %>/<%= Setting.get(:ADMIN_KEY) %>/admin">
                 <i class="fa fa-dashboard"></i>
