Footer mailer update

--- a/app/views/common_assets/shared/mailers/_footer.html.erb
+++ b/app/views/common_assets/shared/mailers/_footer.html.erb
@@ -1,3 +1,13 @@
+<container class="outro">
+	<row>
+		<columns small="12">
+			<p>You are receiving this email because you registered on YugenTrade.com with this email address.</p>
+			<p>Do Not Reply. This is an automatically generated email sent from an unmonitored mailbox.</p>
+			<p>If you have any question, please open a ticket with Support.</p>
+		</columns>
+	</row>
+</container>
+
 <container>
 	<wrapper class="footer">
 		<left>
