CSS for error page is now a static css file

--- a/app/views/layouts/error.html.erb
+++ b/app/views/layouts/error.html.erb
@@ -5,7 +5,7 @@
             Uh! oh! You've broken the site - YugenTrade
     </title>
     <meta name="robots" content="noindex">
-    <link rel="stylesheet" href="https://dbx-oauth.digibitx.com/assets/web-2e86c0798959181d7c0955c12cfc4a9cd2c5406a15da033a595b0379af588343.css">
+    <link rel="stylesheet" href="<%= Setting.get(:CORE_DOMAIN) %>/error_page.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/core.js">></script>
 </head>
 
