Layout based on DBx/funds page

--- a/app/views/layouts/error.html.erb
+++ b/app/views/layouts/error.html.erb
@@ -12,21 +12,13 @@
 <body id="pages" class="devise">
     <%= render partial: 'common_assets/shared/header', locals: { show_user: false, current_user: nil, is_admin: false}  %>
 
-    <div class="container-fluid">
-        <div class="row justify-content-center h-100">
-            <div class="main-card my-auto w-100">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="row justify-content-center">
-                            <%= yield %>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    
-    <%= render 'common_assets/shared/footer' %>
+	<div id="wrap" class="scroll d-flex flex-column justify-content-between">
+
+		<div class='container'>
+			<%= yield %>
+		</div>
+		<%= render 'common_assets/shared/footer' %>
+	</div>
 
 </body>
 </html>
