--- a/assets/stylesheets/common/_footer.scss
+++ b/assets/stylesheets/common/_footer.scss
@@ -26,9 +26,9 @@
 					display: block;
 					margin-top: 0px;
 				}
-				.fa {
-					font-size: 1.75em;
-					margin-left: 15px;
+				.fa, svg {
+					font-size: 1.25em;
+					margin-left: 10px;
 				}
 				.fa-reddit {
 					color: #ff4500;
@@ -49,7 +49,7 @@
 				li {
 					float: none;
 					display: inline;
-					.fa {
+					.fa, svg {
 						margin-right: 15px;
 						margin-left: 0;
 					}
