--- a/assets/stylesheets/common/_header.scss
+++ b/assets/stylesheets/common/_header.scss
@@ -86,8 +86,8 @@ $menu-bgcolor: #24292d;
 		.pages .nav-link {
 			padding: 0 25px 1px;
 			line-height: 45px;
-			> i {
-				padding-right: 5px;
+			> i, > svg{
+				margin-right: 5px;
 			}
 		}
 		.dropdown {
@@ -231,6 +231,7 @@ $menu-bgcolor: #24292d;
 						padding: 10px;
 						a {
 							padding: 7px 17px;
+							line-height: initial;
 						}
 					}
 				}
