Cookie Policy link added to footer

--- a/app/views/common_assets/shared/_footer.html.erb
+++ b/app/views/common_assets/shared/_footer.html.erb
@@ -4,6 +4,7 @@
 			<li class="title"><i class="icon-ygt-logo"></i> YugenTrade</li>
 			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>/pages/about">About</a></li>
 			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>/pages/terms-of-service">Terms Of Service</a></li>
+			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>/pages/cookie-policy">Cookie Policy</a></li>
 			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>/pages/privacy">Privacy</a></li>
 			<li><a href="<%= Setting.get(:STATUS_DOMAIN) %>">Status</a></li>
 		</ul>
