--- a/assets/stylesheets/common/_footer.scss
+++ b/assets/stylesheets/common/_footer.scss
@@ -69,6 +69,15 @@
 	background: #ff8e8e;
 	color: maroon;
 	z-index: 1000;
+	@include media-breakpoint-down(md) {
+		position: fixed;
+		padding-top: 15px;
+		padding-bottom: 20px;
+		line-height: initial;
+		.cookies-eu-button-holder {
+			padding-top: 10px;
+		}
+	}
 	.cookies-eu-button-holder .cookies-eu-ok {
 		background: maroon;
 		padding: 2px 20px;
