Footer link text change

--- a/app/views/common_assets/shared/_prereg_footer.html.erb
+++ b/app/views/common_assets/shared/_prereg_footer.html.erb
@@ -3,7 +3,7 @@
 		<ul class="col-6 col-sm-3 list-unstyled mb-4 mb-sm-3">
 			<li class="title"><i class="icon-ygt-logo"></i> YugenTrade</li>
 			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>/pages/terms-of-service">Terms Of Service</a></li>
-			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>/pages/aml-policy">AML Compliance Policy</a></li>
+			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>/pages/aml-policy">AML Policy</a></li>
 			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>/pages/cookie-policy">Cookie Policy</a></li>
 			<li><a href="<%= Setting.get(:CMS_DOMAIN) %>/pages/privacy">Privacy</a></li>
 		</ul>
